css align fix

--- a/app/assets/stylesheets/administrate/components/_newaid.scss
+++ b/app/assets/stylesheets/administrate/components/_newaid.scss
@@ -34,7 +34,6 @@
   .c-newaid-header {
     display: flex;
     flex-direction: row;
-    align-items: baseline;
 .c-newaid-action-icons {
   display: flex;
   flex-direction: row;
